Branchement du vrai service SOAP (rôle 2) : correction des namespaces JAXB manquants sur le client genere par wsimport